--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,15 @@
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copy-schema",
+    "copy-schema": "mkdir -p dist/db && cp src/db/schema.sql dist/db/",
     "dev": "nodemon src/server.ts",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-issuer": "npm run build && node dist/test-issuer.js",
-    "test-indexer": "npm run build && node dist/test-indexer.js"
+    "test-indexer": "npm run build && node dist/test-indexer.js",
+    "test-indexer-local": "npm run build && node dist/test-indexer-local.js",
+    "test-captable": "npm run build && node dist/test-captable.js"
   },
   "keywords": [],
   "author": "",
