--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "chainequity",
   "version": "1.0.0",
   "type": "module",
+  "bin": {
+    "chainequity": "./cli.ts"
+  },
+  "scripts": {
+    "cli": "tsx cli.ts"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^3.0.3",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.0",
@@ -9,12 +15,18 @@
     "@types/node": "^22.19.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.0.10",
+    "tsx": "^4.20.6",
     "typescript": "~5.8.0",
     "viem": "^2.38.6"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
     "alchemy-sdk": "^3.6.5",
-    "dotenv": "^17.2.3"
+    "chalk": "^5.6.2",
+    "cli-table3": "^0.6.5",
+    "commander": "^14.0.2",
+    "dotenv": "^17.2.3",
+    "inquirer": "^12.10.0",
+    "ora": "^9.0.0"
   }
 }
