--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
     "chainequity": "./cli.ts"
   },
   "scripts": {
-    "cli": "tsx cli.ts"
+    "cli": "tsx cli.ts",
+    "test": "hardhat test",
+    "test:specific": "hardhat test"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^3.0.3",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.0",
     "@nomicfoundation/hardhat-viem": "^3.0.0",
+    "@types/chai": "^5.2.3",
+    "@types/chai-as-promised": "^8.0.2",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.19.0",
+    "chai": "^6.2.0",
+    "chai-as-promised": "^8.0.2",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.0.10",
+    "mocha": "^11.7.4",
     "tsx": "^4.20.6",
     "typescript": "~5.8.0",
     "viem": "^2.38.6"
