--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "copy-schema": "mkdir -p dist/db && cp src/db/schema.sql dist/db/",
     "dev": "nodemon src/server.ts",
     "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
+    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
     "test-issuer": "npm run build && node dist/test-issuer.js",
     "test-indexer": "npm run build && node dist/test-indexer.js",
     "test-indexer-local": "npm run build && node dist/test-indexer-local.js",
@@ -32,9 +34,14 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
