--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && npm run copy-schema",
     "copy-schema": "mkdir -p dist/db && cp src/db/schema.sql dist/db/",
     "dev": "nodemon src/server.ts",
+    "dev:indexer": "nodemon src/indexer-runner.ts",
     "start": "node dist/server.js",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
     "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
