--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "copy-schema": "mkdir -p dist/db && cp src/db/schema.sql dist/db/",
     "dev": "nodemon src/server.ts",
     "dev:indexer": "nodemon src/indexer-runner.ts",
+    "watch-indexer": "nodemon src/watch-indexer.ts",
     "start": "node dist/server.js",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
     "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
