--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.38.6",
-    "wagmi": "^2.19.2"
+    "wagmi": "^2.19.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
